--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "rollup": "^2.32.1",
     "tslib": "^2.0.3",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "front-matter-plugin-api-provider": "^0.1.4-alpha"
   }
 }
